Fixed chart labels overlapping the side labels.

--- a/src/heat.js.scss
+++ b/src/heat.js.scss
@@ -506,11 +506,19 @@ div.heat-js {
             position: relative;
             height: calc( var(--heat-js-spacing-font-size) + var(--heat-js-spacing) );
 
-            div.month-name {
+            div.month-name,
+            div.month-name-space {
                 font-weight: var(--heat-js-text-bold-weight);
                 text-align: left !important;
                 position: absolute;
                 bottom: 0;
+            }
+
+            div.month-name-space {
+                left: 0;
+                top: 0;
+                position: sticky;
+                background-color: var(--heat-js-container-background-color);
             }
         }
     }
